# elephant-ai

./: .gitignore  CLAUDE.md  DESCRIPTION.md  DESIGN.md  Dockerfile  Makefile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml  requirements.txt
docs/: DATA_TYPES.md  reprocessing.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
src/elephant/: __init__.py  atomic.py  audit.py  check_telegram.py  config.py  context_resolver.py  database.py  event_parser.py  event_scorer.py  git_ops.py  health.py  main.py  memory_parser.py  memory_scorer.py  reprocess.py  router.py  run_flow.py  scheduler.py  telegram_api.py  telegram_media.py  tracing.py
tests/: conftest.py  test_anytime_log.py  test_atomic.py  test_chat_history.py  test_clarification.py  test_config.py  test_context_enrichment.py  test_context_resolver.py  test_database.py  test_digest_history.py  test_e2e_conversation.py  test_evening_checkin.py  test_event_parser.py  test_event_scorer.py  test_feedback.py  test_git_ops.py  test_health.py  test_llm_client.py  test_main.py  test_memory_parser.py  test_memory_scorer.py  test_messaging_telegram.py  test_messaging_twilio.py  test_milestones.py  test_models.py  test_monthly_report.py  test_morning_digest.py  test_polling_telegram.py  test_prompts.py  test_question_manager.py  test_raw_messages.py  test_router.py  test_scheduler.py  test_security.py  test_store.py  test_store_groups.py  test_store_traces.py  test_telegram_api.py  test_telegram_media.py  test_tools_agent.py  (+7 more)
(+49 files in other folders)
